# LiteMath

./: .travis.yml  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Image2d.cpp  Image2d.h  LICENSE  LiteData.cpp  LiteData.h  LiteMath.h  LiteMathCU.h  README.md  aligned_alloc.h  coverage.sh  coverage2.pro  coverage2.sh
.github/workflows/: cmake.yml  codecov.yml
cmake_modules/: CodeCoverage.cmake  CompilerWarnings.cmake
extended/: LiteMathCU.h  lm_device_vector.h
flags/: dummy.txt
tests/: tests.h  tests_double2.cpp  tests_double3.cpp  tests_double4.cpp  tests_float2.cpp  tests_float3.cpp  tests_float4.cpp  tests_general.cpp  tests_images.cpp  tests_int2.cpp  tests_int3.cpp  tests_int4.cpp  tests_main.cpp  tests_uint2.cpp  tests_uint3.cpp  tests_uint4.cpp
